cicd/manifests/apps/mediawiki/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki
  namespace: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  template:
    metadata:
      labels:
        app: mediawiki
    spec:
      containers:
        - name: mediawiki
          image: mediawiki:1.41.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 20
          volumeMounts:
            - name: mediawiki-persistent-storage
              mountPath: /var/www/html/images
            # - name: localsettings
            #   mountPath: /var/www/html/LocalSettings.php
            #   subPath: LocalSettings.php
            # TODO
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: mediawiki-persistent-storage
          persistentVolumeClaim:
            claimName: mediawiki-pvc
        - name: localsettings
          configMap:
            name: localsettings
