cicd/manifests/apps/mediawiki/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki
  namespace: mediawiki
spec:
  selector:
    app: mediawiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
