cicd/manifests/apps/mediawiki/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki
  namespace: mediawiki
spec:
  ingressClassName: traefik
  rules:
    - host: wiki.prod.server.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
  tls:
    - hosts:
        - wiki.prod.server.home
      secretName: mediawiki-tls-secret
